--- a/_includes/themes/greyer/header.html
+++ b/_includes/themes/greyer/header.html
@@ -1,5 +1,6 @@
 <header id="header">
-    <section class="header header-cnt fn-clear">
+<div class="header fn-clear">
+    <section class="header-cnt fn-clear">
        <div class="logo">
          <div class="logo-cnt">
            <a href="/" title="芝麻小站"class="fontface" id="title"><span class="orange">芝</span><span class="pink">麻</span><span class="purple">小</span><span class="blue ">站</span><span class="green "></span></a>
@@ -18,4 +19,5 @@
          </ul>
        </nav>
     </section>
+</div>
 </header>
