--- a/_includes/themes/greyer/header.html
+++ b/_includes/themes/greyer/header.html
@@ -7,6 +7,19 @@
            <p>{{ site.tagline }}</p>
          </div>
        </div>
+       <div class='adstop'>
+       <script type="text/javascript"><!--
+       google_ad_client = "ca-pub-3891446182867361";
+       /* 320x50 */
+       google_ad_slot = "5712482307";
+       google_ad_width = 320;
+       google_ad_height = 50;
+       //-->
+       </script>
+       <script type="text/javascript"
+       src="http://pagead2.googlesyndication.com/pagead/show_ads.js">
+       </script>
+       </div>
        <nav id="nav">
          <ul>{% capture index %}{{ 'index' }}{% endcapture %}{% capture archive %}{{ 'archive' }}{% endcapture %}{% capture categories %}{{ 'categories' }}{% endcapture %}{% capture pages %}{{ 'pages' }}{% endcapture %}{% capture tags %}{{ 'tags' }}{% endcapture %}{% capture about %}{{ 'about' }}{% endcapture %}
 {% if page.name == index %}<li class="active"><a href="/" class="active">首页</a></li>{% else %}<li><a href="/">首页</a></li>{% endif %}
