--- a/assets/themes/greyer/css/style.css
+++ b/assets/themes/greyer/css/style.css
@@ -54,13 +54,13 @@ body                        { background: url(../img/body-bg.jpg) repeat 0 0; mi
 .header-cnt .logo-cnt a:hover 
                             { text-decoration: none; color: #f6f6f6; text-shadow: 1px 1px 2px #444; }
 .header-cnt .logo-cnt p { font-style: italic; color: #ababab; margin: 10px; font-family: Verdana, Geneva, Arial, Helvetica, sans-serif; }
-.header-cnt #nav            { float: right; margin: 0 0 0 300px; height: 36px; padding: 0px 20px; background: #2f3133; border-radius: 8px 8px; border-top: 1px solid #252a30; border-left: 1px solid #252a30; border-right: 1px solid #252a30; border-bottom: 1px solid #4a4d52; box-shadow: -2px -2px 8px #222222 inset; }
+.header-cnt #nav            { float: right; margin: 0; height: 36px; padding: 0px 20px; background: #2f3133; border-radius: 8px 8px; border-top: 1px solid #252a30; border-left: 1px solid #252a30; border-right: 1px solid #252a30; border-bottom: 1px solid #4a4d52; box-shadow: -2px -2px 8px #222222 inset; }
 .header-cnt #nav li         { float: left; }
 .header-cnt #nav li a       { padding: 9px; display: block; color: #999; font-family: Verdana; }
 .header-cnt #nav li a:hover { text-decoration: none; color: #fefefe; }
 .header-cnt #nav .current a { color: #fefefe; }
 .header-cnt #nav .active	{ color: white; }
-
+.adstop { float: left; width: 320px; margin: -6px 0 0 260px; padding: 1px; }
 /** tag_box **/
 
 .tag_box { list-style:none; margin:0; padding:5px 0 ; overflow:hidden; }
